--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- header start -->
   <header class="container-fluid pl-5 pt-2">
     <div class="row">
-      <div class="col " id="logo"><a href="" class=""><img src="D:\portfolio\img\logo.PNG" alt=""></a></div>
+      <div class="col " id="logo"><a href="" class=""><img src="img\logo.PNG" alt=""></a></div>
       <div class="col pt-2" id="nav-btn"><a href="#" id="shbtn" class="btn" onclick="show()"><i
             class="fas fa-bars"></i></a></div>
     </div>
@@ -88,7 +88,7 @@
           target="_blank">Download CV</a><a href="#" id="skill_btn" class="btn ml-3">My Skills</a>
       </div>
       <div class="col-sm-12 col-md">
-        <div id="introimg"><img src="../portfolio/img/me2.jpg" alt=""></div>
+        <div id="introimg"><img src="img/me2.jpg" alt=""></div>
       </div>
     </div>
 
@@ -214,7 +214,7 @@
       </div>
       <div class="row">
         <div class="col-4">
-          <div id="abtimg"><img src="../portfolio/img/me.jpg" alt=""></div>
+          <div id="abtimg"><img src="img/me.jpg" alt=""></div>
         </div>
         <div class="col" id="ghy">
           <p><b>Hi.! My name is USAMA WARSI.Your Front End web designer. </b>I will help you to make your website design
