--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- header start -->
   <header class="container-fluid pl-5 pt-2">
     <div class="row">
-      <div class="col " id="logo"><a href="" class=""><img src="img\logo.PNG" alt=""></a></div>
+      <div class="col " id="logo"><a href="" class=""><img src="img\logo.png" alt=""></a></div>
       <div class="col pt-2" id="nav-btn"><a href="#" id="shbtn" class="btn" onclick="show()"><i
             class="fas fa-bars"></i></a></div>
     </div>
@@ -300,7 +300,7 @@
       </div>
       <div class="row">
         <div class="col-md col-sm-12 hcardc">
-          <img src="img/coming.PNG" alt="" class="w-100">
+          <img src="img/coming.png" alt="" class="w-100">
           <div class="hoverlay">
             <h4>Coming soon</h4>
             <hr>
@@ -317,7 +317,7 @@
           </div>
         </div>
         <div class="col-md col-sm-12 hcardc">
-          <img src="img/coming.PNG" alt="" class="w-100">
+          <img src="img/coming.png" alt="" class="w-100">
           <div class="hoverlay">
             <h4>Coming soon</h4>
             <hr>
@@ -385,27 +385,27 @@
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/2.PNG" alt=""></div>
+      <div class="col-8"><img src="img/2.png" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/3.PNG" alt=""></div>
+      <div class="col-8"><img src="img/3.png" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/4.PNG" alt=""></div>
+      <div class="col-8"><img src="img/4.png" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/5.PNG" alt=""></div>
+      <div class="col-8"><img src="img/5.png" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/6.PNG" alt=""></div>
+      <div class="col-8"><img src="img/6.png" alt=""></div>
       <div class="col-2"></div>
     </div>
   </div>
