--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       chance to show my worth and cability to your work.</p>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/1.PNG" alt=""></div>
+      <div class="col-8"><img src="img/1.png" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
