--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- header start -->
   <header class="container-fluid pl-5 pt-2">
     <div class="row">
-      <div class="col " id="logo"><a href="" class=""><img src="img\logo.png" alt=""></a></div>
+      <div class="col " id="logo"><a href="" class=""><img src="img\logo.PNG" alt=""></a></div>
       <div class="col pt-2" id="nav-btn"><a href="#" id="shbtn" class="btn" onclick="show()"><i
             class="fas fa-bars"></i></a></div>
     </div>
@@ -405,7 +405,7 @@
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img " src=" img/6.PNG" alt=""></div>
+      <div class="col-8"><img src="img/6.PNG" alt=""></div>
       <div class="col-2"></div>
     </div>
   </div>
