--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- header start -->
   <header class="container-fluid pl-5 pt-2">
     <div class="row">
-      <div class="col " id="logo"><a href="" class=""><img src="img\logo.png" alt=""></a></div>
+      <div class="col " id="logo"><a href="" class=""><img src="img\logo.PNG" alt=""></a></div>
       <div class="col pt-2" id="nav-btn"><a href="#" id="shbtn" class="btn" onclick="show()"><i
             class="fas fa-bars"></i></a></div>
     </div>
@@ -205,8 +205,8 @@
     <div class="circle cir2" id="shape"></div>
     <div class="left-triangle" id="shape"></div>
     <button class="btn" id="backbtn"><i class="fas fa-arrow-circle-left"></i></button>
-    <div class="container mt-5 innercon">
-      <div class="row mb-5">
+    <div class="container innercon">
+      <div class="row mb-3">
         <div class="col" id="info_col">
           <h4>MAIN INFO</h4>
           <h1>ABOUT ME</h1>
@@ -232,7 +232,7 @@
         <div class="row" id="moreabout">
           <div class="col" id="experience">
             <div class="row">
-              <div class="col" id="box">
+              <div class="col-md col-sm-12" id="box">
                 <h6>From 2019 to Till:</h6>
                 <h4>Hawk Grammar School:</h4>
                 <h6>Computer Operator:</h6>
@@ -243,7 +243,7 @@
             </div>
             <div class="row">
               <div class="col"></div>
-              <div class="col" id="box">
+              <div class="col-md col-sm-12" id="box">
                 <h6>From 2019 to Till</h6>
                 <h4>Hawk Grammar School</h4>
                 <h6>Primary Teacher</h6>
@@ -268,7 +268,7 @@
               <div class="col"></div>
               <div class="col-md col-sm-12" id="box">
                 <h6>2020</h6>
-                <h4>Aisha Baani Govt. College no 1</h4>
+                <h4>Aisha Bawani Govt. College no 1</h4>
                 <h6>I.Com</h6>
                 <p>Intermidiate from Karachi Board in the field of business studdies</p>
               </div>
@@ -300,7 +300,7 @@
       </div>
       <div class="row">
         <div class="col-md col-sm-12 hcardc">
-          <img src="img/coming.png" alt="" class="w-100">
+          <img src="img/coming.PNG" alt="" class="w-100">
           <div class="hoverlay">
             <h4>Coming soon</h4>
             <hr>
@@ -317,7 +317,7 @@
           </div>
         </div>
         <div class="col-md col-sm-12 hcardc">
-          <img src="img/coming.png" alt="" class="w-100">
+          <img src="img/coming.PNG" alt="" class="w-100">
           <div class="hoverlay">
             <h4>Coming soon</h4>
             <hr>
@@ -338,7 +338,7 @@
     </div>
     <hr class="bg-white">
     <div class="row">
-      <div class="col text-white">
+      <div class="col text-white cp">
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           I am Usama Warsi. Your front-end web designer. now i am here to show to my experties and my work to inspire
           you. and i thought Quality in your work reflects your commitment towards it. so the my work will tell you the
@@ -347,9 +347,9 @@
         </p>
       </div>
     </div>
-    <i class="fas fa-phone text-primary mb-4 mt-3" style="font-size: 20px;"><Span
+    <i class="fas fa-phone text-primary mt-3" id="si"><Span
         class="ml-3 text-white">0349-2069-448</Span></i><br>
-    <i class="fas fa-at text-white mb-4 text-danger" style="font-size: 20px;"> <Span
+    <i class="fas fa-at text-white text-danger" id="si"> <Span
         class="ml-3 text-white">usamashaheen74@yahoo.com</Span></i>
     <div class="row">
       <div class="col" id="social_icon">
@@ -367,12 +367,12 @@
   <!-- project div start -->
   <div class="container-fluid" id="show-project">
     <button class="btn" id="spbackbtn" style="z-index: 1000;"><i class="fas fa-arrow-circle-left"></i></button>
-    <div class="row mt-5 pt-5">
+    <div class="row pt-5">
       <div class="col" id="info_col">
         <h1>1st eProject</h1>
       </div>
     </div>
-    <p class="text-white  ">My 1st semester CPISM eProject in ACCP Prime from Aptect Metro Star Gate. Which is the
+    <p class="text-white">My 1st semester CPISM eProject in ACCP Prime from Aptect Metro Star Gate. Which is the
       Project of the month of
       july 2021. and the project is based on Origami paper work craft. this website is created for to help the children
       to helping them to make a cool staff with a piece of paper. and also for adults one to make easy for them
@@ -380,32 +380,32 @@
       chance to show my worth and cability to your work.</p>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/1.png" alt=""></div>
+      <div class="col-md-8 col-sm-12"><img src="img/1.PNG" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/2.png" alt=""></div>
+      <div class="col-md-8 col-sm-12"><img src="img/2.PNG" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/3.png" alt=""></div>
+      <div class="col-md-8 col-sm-12"><img src="img/3.PNG" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/4.png" alt=""></div>
+      <div class="col-md-8 col-sm-12"><img src="img/4.PNG" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/5.png" alt=""></div>
+      <div class="col-md-8 col-sm-12"><img src="img/5.PNG" alt=""></div>
       <div class="col-2"></div>
     </div>
     <div class="row">
       <div class="col-2"></div>
-      <div class="col-8"><img src="img/6.png" alt=""></div>
+      <div class="col-md-8 col-sm-12"><img src="img/6.PNG" alt=""></div>
       <div class="col-2"></div>
     </div>
   </div>
