--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           </div>
         </div>
         <div class="col-md col-sm-12 hcardc">
-          <img src="img/origami.png" alt="" class="w-100">
+          <img src="img/origami.PNG" alt="" class="w-100">
           <div class="hoverlay">
             <h4>1st eProject </h4>
             <hr>
