--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <hr class="bg-white">
     <a href="#" id="bs-btn" class="btn"><i class="fas fa-chevron-circle-left"></i></a>
     <div class="row">
-      <div class="col-md-6 col-sm-6 bars">
+      <div class="col-md-6 col-6 bars">
         <div class="progress blue">
           <span class="progress-left">
             <span class="progress-bar"></span>
@@ -136,7 +136,7 @@
         </div>
         <h6 class="text-white"><i class="fab fa-html5"></i>HTML</h6>
       </div>
-      <div class="col-md-6 col-sm-6 bars">
+      <div class="col-md-6 col-6 bars">
         <div class="progress yellow">
           <span class="progress-left">
             <span class="progress-bar"></span>
@@ -151,7 +151,7 @@
     </div>
     <div class="row">
       <hr class="bg-white">
-      <div class="col-md-6 col-sm-6 bars">
+      <div class="col-md-6 col-6 bars">
         <div class="progress pink">
           <span class="progress-left">
             <span class="progress-bar"></span>
@@ -163,7 +163,7 @@
         </div>
         <h6 class="text-white"><i class="fab fa-bootstrap"></i>Bootstrap</h6>
       </div>
-      <div class="col-md-6 col-sm-6 bars">
+      <div class="col-md-6 col-6 bars">
         <div class="progress green">
           <span class="progress-left">
             <span class="progress-bar"></span>
