--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;">'</span>m Usama</h1>
         <h3>Your Web Designer</h3>
-        <a href="https://1drv.ms/w/s!AieEBh3VrZ-ahB2C9kjimW7Mu8G-" id="cv" class="btn"
+        <a href="https://drive.google.com/file/d/1vH-5SxYrBhHCQQMUNdhX40Tl9N_fb6km/view?usp=sharing" id="cv" class="btn"
           target="_blank">Download CV</a><a href="#" id="skill_btn" class="btn ml-3">My Skills</a>
       </div>
       <div class="col-sm-12 col-md">
