--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;">'</span>m Usama</h1>
         <h3>Your Web Designer</h3>
-        <a href="https://drive.google.com/file/d/1vH-5SxYrBhHCQQMUNdhX40Tl9N_fb6km/view?usp=sharing" id="cv" class="btn"
+        <a href="https://drive.google.com/file/d/1mCSxoeq0Gmb-qhnrJOU7jzp0ed5veU0s/view?usp=sharing" id="cv" class="btn"
           target="_blank">Download CV</a><a href="#" id="skill_btn" class="btn ml-3">My Skills</a>
       </div>
       <div class="col-sm-12 col-md">
@@ -356,7 +356,7 @@
         <a href="https://www.facebook.com/Milk_shake-109370828128870" target="_blank" id="fb"><i
             class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/azanwarsi/" id="ins" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/Azan786-bit" target="_blank" id="git"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/Usama-warsi" target="_blank" id="git"><i class="fab fa-github"></i></a>
         <a href="https://api.whatsapp.com/send/?phone=923492069448&text&app_absent=0" id="what" target="_blank"><i
             class="fab fa-whatsapp"></i></a>
 
