--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#" id="abbtn">ABOUT</a>
           </li>
           <li>
-            <a href="#" id="probtn">PROJECTS</a>
+            <a href="https://github.com/Usama-warsi/Projects/" target="_blank" >PROJECTS</a>
           </li>
           <li>
             <a href="#" id="conbtn">CONTACT</a>
@@ -176,7 +176,32 @@
         <h6 class="text-white"><i class="fab fa-js"></i>Javascript</h6>
       </div>
     </div>
-
+    <div class="row">
+      <div class="col-md-6 col-6 bars">
+        <div class="progress blue">
+          <span class="progress-left">
+            <span class="progress-bar"></span>
+          </span>
+          <span class="progress-right">
+            <span class="progress-bar"></span>
+          </span>
+          <div class="progress-value">95%</div>
+        </div>
+        <h6 class="text-white"><i class="fab fa-html5"></i>PHP/Laravel</h6>
+      </div>
+      <div class="col-md-6 col-6 bars">
+        <div class="progress yellow">
+          <span class="progress-left">
+            <span class="progress-bar"></span>
+          </span>
+          <span class="progress-right">
+            <span class="progress-bar"></span>
+          </span>
+          <div class="progress-value">90%</div>
+        </div>
+        <h6 class="text-white"><i class="fab fa-css3-alt"></i>Databases</h6>
+      </div>
+    </div>
   </div>
   <!-- skill div end -->
   <!-- about div start -->
